WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285442
REGRESSION(
288409@main
): Tripped assertion in TestWebKitAPI.SOAuthorizationSubFrame.AuthorizationOptions
https://bugs.webkit.org/show_bug.cgi?id=285442
Summary
REGRESSION(288409@main): Tripped assertion in TestWebKitAPI.SOAuthorizationSu...
Jonathan Bedard
Reported
2025-01-06 10:08:54 PST
TestWebKitAPI.SOAuthorizationSubFrame.AuthorizationOptions is triggering an assertion: ASSERTION FAILED: url.protocolIsFile() /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Source/WebKit/UIProcess/WebProcessProxy.cpp(1455) : void WebKit::WebProcessProxy::addPreviouslyApprovedFileURL(const URL &) 1 0x18afe2918 WebKit::WebProcessProxy::addPreviouslyApprovedFileURL(WTF::URL const&) 2 0x18ad929cb WebKit::WebFrameProxy::loadData(std::__1::span<unsigned char const, 18446744073709551615ul>, WTF::String const&, WTF::String const&, WTF::URL const&) 3 0x18a54bc93 WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_0::operator()(WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&) const 4 0x18a54bbbd decltype(std::declval<WTF::Visitor<WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_0, WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_1>>()(std::declval<WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&>())) std::__1::__invoke[abi:sn180100]<WTF::Visitor<WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_0, WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_1>, WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&>(WTF::Visitor<WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_0, WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_1>&&, WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&) 5 0x18a54bb1d std::__1::invoke_result<WTF::Visitor<WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_0, WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_1>, WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&>::type std::__1::invoke[abi:sn180100]<WTF::Visitor<WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_0, WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_1>, WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&>(WTF::Visitor<WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_0, WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_1>&&, WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&) 6 0x18a54b973 decltype(auto) WTF::visitOneVariant<0ul, WTF::Visitor<WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_0, WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_1>, std::__1::variant<WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>, WTF::String>&>(WTF::Visitor<WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_0, WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_1>&&, std::__1::variant<WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>, WTF::String>&) 7 0x18a540068 decltype(visitOneVariant(makeVisitor(std::forward<WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_0>(fp0), std::forward<WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_1>(fp0)), asVariant(std::forward<std::__1::variant<WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>, WTF::String>&>(fp)))) WTF::switchOn<std::__1::variant<WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>, WTF::String>&, WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_0, WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_1>(std::__1::variant<WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>, WTF::String>&, WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_0&&, WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame()::$_1&&) 8 0x18a53fe2b WebKit::SubFrameSOAuthorizationSession::loadRequestToFrame() 9 0x18a53ecbc WebKit::SubFrameSOAuthorizationSession::appendRequestToLoad(WTF::URL&&, std::__1::variant<WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>, WTF::String>&&) 10 0x18a53f4bf WebKit::SubFrameSOAuthorizationSession::beforeStart() 11 0x18a531835 WebKit::NavigationSOAuthorizationSession::shouldStartInternal() 12 0x18a539562 WebKit::SOAuthorizationSession::shouldStart() 13 0x18a543052 -[WKSOAuthorizationDelegate setSession:] 14 0x18a536f0d WebKit::SOAuthorizationCoordinator::tryAuthorize(WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WebKit::WebPageProxy&, WTF::Function<void (bool)>&&) 15 0x18a1ceb46 WebKit::trySOAuthorization(WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WebKit::WebPageProxy&, WTF::Function<void (bool)>&&) 16 0x18a1b5256 WebKit::tryInterceptNavigation(WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WebKit::WebPageProxy&, WTF::Function<void (bool)>&&) 17 0x18a1d0e4b WebKit::NavigationState::NavigationClient::decidePolicyForNavigationAction(WebKit::WebPageProxy&, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WTF::Ref<WebKit::WebFramePolicyListenerProxy, WTF::RawPtrTraits<WebKit::WebFramePolicyListenerProxy>, WTF::DefaultRefDerefTraits<WebKit::WebFramePolicyListenerProxy>>&&)::$_0::operator()(WKNavigationActionPolicy, WKWebpagePreferences*)::'lambda'()::operator()() 18 0x18a1d0a99 WTF::Detail::CallableWrapper<WebKit::NavigationState::NavigationClient::decidePolicyForNavigationAction(WebKit::WebPageProxy&, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WTF::Ref<WebKit::WebFramePolicyListenerProxy, WTF::RawPtrTraits<WebKit::WebFramePolicyListenerProxy>, WTF::DefaultRefDerefTraits<WebKit::WebFramePolicyListenerProxy>>&&)::$_0::operator()(WKNavigationActionPolicy, WKWebpagePreferences*)::'lambda'(), void>::call() 19 0x11caa6a87 WTF::Function<void ()>::operator()() const 20 0x11cb182e7 WTF::ensureOnMainRunLoop(WTF::Function<void ()>&&) 21 0x18a1d03d0 WebKit::NavigationState::NavigationClient::decidePolicyForNavigationAction(WebKit::WebPageProxy&, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WTF::Ref<WebKit::WebFramePolicyListenerProxy, WTF::RawPtrTraits<WebKit::WebFramePolicyListenerProxy>, WTF::DefaultRefDerefTraits<WebKit::WebFramePolicyListenerProxy>>&&)::$_0::operator()(WKNavigationActionPolicy, WKWebpagePreferences*) 22 0x18a1d2b21 WebKit::NavigationState::NavigationClient::decidePolicyForNavigationAction(WebKit::WebPageProxy&, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WTF::Ref<WebKit::WebFramePolicyListenerProxy, WTF::RawPtrTraits<WebKit::WebFramePolicyListenerProxy>, WTF::DefaultRefDerefTraits<WebKit::WebFramePolicyListenerProxy>>&&)::$_1::operator()(WKNavigationActionPolicy) 23 0x18a1d2d15 WTF::BlockPtr<void (WKNavigationActionPolicy)> WTF::BlockPtr<void (WKNavigationActionPolicy)>::fromCallable<WebKit::NavigationState::NavigationClient::decidePolicyForNavigationAction(WebKit::WebPageProxy&, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WTF::Ref<WebKit::WebFramePolicyListenerProxy, WTF::RawPtrTraits<WebKit::WebFramePolicyListenerProxy>, WTF::DefaultRefDerefTraits<WebKit::WebFramePolicyListenerProxy>>&&)::$_1>(WebKit::NavigationState::NavigationClient::decidePolicyForNavigationAction(WebKit::WebPageProxy&, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WTF::Ref<WebKit::WebFramePolicyListenerProxy, WTF::RawPtrTraits<WebKit::WebFramePolicyListenerProxy>, WTF::DefaultRefDerefTraits<WebKit::WebFramePolicyListenerProxy>>&&)::$_1)::'lambda'(void*, WKNavigationActionPolicy)::operator()(void*, WKNavigationActionPolicy) const 24 0x18a1d2ce1 WTF::BlockPtr<void (WKNavigationActionPolicy)> WTF::BlockPtr<void (WKNavigationActionPolicy)>::fromCallable<WebKit::NavigationState::NavigationClient::decidePolicyForNavigationAction(WebKit::WebPageProxy&, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WTF::Ref<WebKit::WebFramePolicyListenerProxy, WTF::RawPtrTraits<WebKit::WebFramePolicyListenerProxy>, WTF::DefaultRefDerefTraits<WebKit::WebFramePolicyListenerProxy>>&&)::$_1>(WebKit::NavigationState::NavigationClient::decidePolicyForNavigationAction(WebKit::WebPageProxy&, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WTF::Ref<WebKit::WebFramePolicyListenerProxy, WTF::RawPtrTraits<WebKit::WebFramePolicyListenerProxy>, WTF::DefaultRefDerefTraits<WebKit::WebFramePolicyListenerProxy>>&&)::$_1)::'lambda'(void*, WKNavigationActionPolicy)::__invoke(void*, WKNavigationActionPolicy) 25 0x109430977 -[TestSOAuthorizationDelegate webView:decidePolicyForNavigationAction:decisionHandler:] 26 0x18a1b4b22 WebKit::NavigationState::NavigationClient::decidePolicyForNavigationAction(WebKit::WebPageProxy&, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WTF::Ref<WebKit::WebFramePolicyListenerProxy, WTF::RawPtrTraits<WebKit::WebFramePolicyListenerProxy>, WTF::DefaultRefDerefTraits<WebKit::WebFramePolicyListenerProxy>>&&) 27 0x18adfb64f WebKit::WebPageProxy::decidePolicyForNavigationAction(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::WebFrameProxy&, WebKit::NavigationActionData&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&) 28 0x18adf95b7 WebKit::WebPageProxy::decidePolicyForNavigationActionAsyncShared(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::NavigationActionData&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&) 29 0x18adf92ea WebKit::WebPageProxy::decidePolicyForNavigationActionAsync(WebKit::NavigationActionData&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&) 30 0x189ac7d9c auto void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (WebKit::NavigationActionData&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&), std::__1::tuple<WebKit::NavigationActionData>, void (WebKit::PolicyDecision&&)>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(WebKit::NavigationActionData&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&), std::__1::tuple<WebKit::NavigationActionData>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::'lambda'(auto&&...)::operator()<WebKit::NavigationActionData>(auto&&...) const 31 0x189ac7ced decltype(std::declval<WebKit::WebPageProxy>()(std::declval<WebKit::NavigationActionData>())) std::__1::__invoke[abi:sn180100]<void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (WebKit::NavigationActionData&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&), std::__1::tuple<WebKit::NavigationActionData>, void (WebKit::PolicyDecision&&)>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(WebKit::NavigationActionData&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&), std::__1::tuple<WebKit::NavigationActionData>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::'lambda'(auto&&...), WebKit::NavigationActionData>(WebKit::WebPageProxy&&, WebKit::NavigationActionData&&) History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.SOAuthorizationSubFrame.AuthorizationOptions&style=debug
Not the only test that's tripping this assertion, but seems to be representative.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-06 10:24:02 PST
<
rdar://problem/142424622
>
Jonathan Bedard
Comment 2
2025-01-06 10:28:37 PST
Timeout in `TestWebKitAPI.WKBackForwardList.BackForwardListRemoveAndAddSubframes` also appears to be related.
Charlie Wolfe
Comment 3
2025-01-06 11:47:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38581
EWS
Comment 4
2025-01-06 16:46:38 PST
Committed
288493@main
(03914208e771): <
https://commits.webkit.org/288493@main
> Reviewed commits have been landed. Closing PR #38581 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug