REGRESSION(288409@main): Tripped assertion in TestWebKitAPI.SOAuthorizationSubFrame.AuthorizationOptions https://bugs.webkit.org/show_bug.cgi?id=285442 rdar://142424622

Reviewed by Pascoe.

Other calls to WebProcessProxy::addPreviouslyApprovedFileURL have a check verifying the URL being passed
has a file protocol. This one should too.

* Source/WebKit/UIProcess/WebFrameProxy.cpp:
(WebKit::WebFrameProxy::loadData):

Canonical link: https://commits.webkit.org/288493@main